AC_INIT(texttopic.c)
PRODUCT=texttopic
VERSION=1.0
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

LDFLAGS="$LDFLAGS -L/usr/local/lib"
CFLAGS="$CFLAGS -I/usr/local/include"
CPPFLAGS="$CPPFLAGS -I/usr/local/include"

dnl Checks for programs.
AC_PROG_CC
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_FUNC([png_create_write_struct], [:],[AC_CHECK_LIB([png], [png_create_write_struct], ,AC_MSG_ERROR([can't find libpng]))])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h png.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
